Address review comments for reusable feature DB flow